# tauri-py

./: README.md  bun.lockb  package.json
src-tauri/: .gitignore  Cargo.toml  build.rs  expanded.rs  state.proto  tauri.conf.json
src-tauri/python/: pyproject.toml
src-tauri/python/src/: __init__.py
src-tauri/src/: main.rs
src-tauri/src_py/: __init__.py
