[package]
name = "tauri-py"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }
pyo3_bindgen = "0.5.0"
quote = "1.0.37"
syn = {version = "2.0.76", features= ["full"] }
proc-macro2 = "1.0.86"
protobuf-codegen = "3.5.1"

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pyo3 = {version="0.21.0", features = ["auto-initialize"] }
protobuf = "3.5.1"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
